--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1438,8 +1438,17 @@ nav.navbar.bootsnav ul.nav li.dropdown ul.dropdown-menu > li > a:focus{
 
 
 /* ----------------- Vides  ----------------- */
+.landing-wrapper {
+    display: table;
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('http://placehold.it/350x150');
+    background-position: center top;
+    height: 350px;
+    color: white;
+}
+
 #bg-video{
-	background:url(../images/video.jpg) no-repeat;
+	background:url(../images/home/parallax1.jpg) no-repeat;
 	background-size:cover;
 	background-position:center center;
 	color:#fff;
