--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1448,7 +1448,7 @@ nav.navbar.bootsnav ul.nav li.dropdown ul.dropdown-menu > li > a:focus{
 }
 
 #bg-video{
-	background:url(../images/home/parallax1.jpg) no-repeat;
+	background:url(../images/home/bg.png) no-repeat;
 	background-size:cover;
 	background-position:center center;
 	color:#fff;
@@ -1562,7 +1562,7 @@ nav.navbar.bootsnav ul.nav li.dropdown ul.dropdown-menu > li > a:focus{
 
 /* ----------------- Parallax Backgrounds ----------------- */
 .parallax_one{
-	background:url(../images/parallax-one.jpg) no-repeat;
+	background:url(../images/home/parallax1.jpg) no-repeat;
 }
 .parallax_one, .parallax_two, .parallax_news, .parallax_bg_slider, .page_header{
 	background-size:cover;
