--- a/public/css/style.css
+++ b/public/css/style.css
@@ -616,7 +616,7 @@ ul.social_icon li a:after, ul.links li a, .footer_small .breadcrumb li a{
 	background:rgba(255,255,255, .8);
 }
 .service_wrap .overlay, #layout-project .overlay{
-	background:rgba(115,174,32, .8);
+    background:rgba(37, 116, 62, .8);
 }
 .overlay, .overlay .overlay_inner, .overlay .overlay_center{
 	position:absolute;
